--- a/index.html
+++ b/index.html
@@ -37,28 +37,38 @@ a:active, a:hover {
 <div class="content">
 <pre>
 
-  ⠀⠀⠀⠀⡼⠁⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡌⢳⡀⠀⠀⠀
-⠀⠀⠀⣸⠃⢰⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡇⠈⣧⠀⠀⠀
-⠀⠀⢠⡏⠀⢸⣇⠀⠀⠀⠀⠀⢀⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⢸⡇⠀⢸⡆⠀⠀
-⠀⠀⢸⡇⠀⠘⢿⠀⠀⣠⠴⠚⠉⠉⠁⠀⠉⠉⠛⠶⣄⡀⠀⣼⠃⠀⠀⡇⠀⠀
-⡆⠀⢸⡇⠀⠀⠈⠳⣾⣭⡙⠀⠀⠀⠀⠀⠀⠀⠀⠏⣭⣿⡾⠃⠀⠀⠀⡇⠀⢠
-⡿⡄⠘⣇⠀⠀⢀⠀⠀⢹⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⣏⠁⠀⡀⠀⠀⢸⠇⢀⢾
-⢸⡙⢄⠹⣆⢄⠀⠁⢲⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣖⠊⠀⢠⣤⠏⢠⢊⡾
-⠸⡝⣌⠳⣬⡟⠻⠛⠫⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠜⠛⠟⠺⣏⠔⢁⠊⡇
-⠀⣧⠉⡦⣼⡀⠀⡱⠀⠀⠀⠀⠀⠀⡄⢀⠊⠀⠀⠀⠀⠀⠪⠀⢀⣿⠴⠁⢸⠁
-⠀⠸⣤⡀⠀⣿⢌⡀⠀⠀⠀⠀⠀⠀⠃⠀⡀⠀⠀⠀⠀⠀⢀⡡⣾⠁⠘⣠⠏⠀
-⠀⠀⠈⠻⣄⡏⠀⠈⢻⡖⠦⣄⡀⢠⠀⠀⡇⠀⣀⠤⢒⡿⠁⠀⢹⣄⡼⠁⠀⠀
-⠀⠀⠀⠀⠸⡇⠀⠀⠀⠈⠓⠚⠋⠚⠀⠀⠓⠛⠓⠒⠁⠀⠀⠀⢀⡏⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠙⣦⠀⢤⣔⠒⠀⠀⢹⠀⠀⣌⠀⠀⠒⢒⢤⠄⣰⠟⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠘⣧⠈⠊⣧⡀⠀⡎⠁⠀⢸⡀⠀⣴⠣⠁⣰⡇⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⢿⡀⠀⠘⡜⠢⢼⣆⢠⡯⠔⢊⠏⠀⢀⣸⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠙⢶⡀⢫⠺⢤⢿⣮⡦⠒⡹⢀⡴⠋⠁⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢷⢊⡳⢤⣈⣁⣤⡖⡱⣾⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠳⡄⠉⠉⠉⠉⢀⡼⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠹⣆⣀⣀⣠⠟⠀⠀⠠⠖⠒⠒⠒⠂⠀⠀⠀⠀
+                                                                __    
+                                                              _|  \_  
+ _______    ______    _______   _______  __    __   _______  /   $$ \ 
+|       \  /      \  /       \ /       \|  \  |  \ /       \|  $$$$$$\
+| $$$$$$$\|  $$$$$$\|  $$$$$$$|  $$$$$$$| $$  | $$|  $$$$$$$| $$___\$$
+| $$  | $$| $$    $$ \$$    \  \$$    \ | $$  | $$ \$$    \  \$$    \ 
+| $$  | $$| $$$$$$$$ _\$$$$$$\ _\$$$$$$\| $$__/ $$ _\$$$$$$\ _\$$$$$$\
+| $$  | $$ \$$     \|       $$|       $$ \$$    $$|       $$|  \__/ $$
+ \$$   \$$  \$$$$$$$ \$$$$$$$  \$$$$$$$   \$$$$$$  \$$$$$$$  \$$    $$
+                                                              \$$$$$$ 
+                                                                \$$   
+		 ⠀⠀⠀⡼⠁⡟⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡌⢳⡀⠀⠀⠀
+		⠀⠀⠀⣸⠃⢰⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⡇⠈⣧⠀⠀⠀
+		⠀⠀⢠⡏⠀⢸⣇⠀⠀⠀⠀⠀⢀⣀⣀⣀⣀⡀⠀⠀⠀⠀⠀⢸⡇⠀⢸⡆⠀⠀
+		⠀⠀⢸⡇⠀⠘⢿⠀⠀⣠⠴⠚⠉⠉⠁⠀⠉⠉⠛⠶⣄⡀⠀⣼⠃⠀⠀⡇⠀⠀
+		⡆⠀⢸⡇⠀⠀⠈⠳⣾⣭⡙⠀⠀⠀⠀⠀⠀⠀⠀⠏⣭⣿⡾⠃⠀⠀⠀⡇⠀⢠
+		⡿⡄⠘⣇⠀⠀⢀⠀⠀⢹⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⣏⠁⠀⡀⠀⠀⢸⠇⢀⢾
+		⢸⡙⢄⠹⣆⢄⠀⠁⢲⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣖⠊⠀⢠⣤⠏⢠⢊⡾
+		⠸⡝⣌⠳⣬⡟⠻⠛⠫⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠜⠛⠟⠺⣏⠔⢁⠊⡇
+		⠀⣧⠉⡦⣼⡀⠀⡱⠀⠀⠀⠀⠀⠀⡄⢀⠊⠀⠀⠀⠀⠀⠪⠀⢀⣿⠴⠁⢸⠁
+		⠀⠸⣤⡀⠀⣿⢌⡀⠀⠀⠀⠀⠀⠀⠃⠀⡀⠀⠀⠀⠀⠀⢀⡡⣾⠁⠘⣠⠏⠀
+		⠀⠀⠈⠻⣄⡏⠀⠈⢻⡖⠦⣄⡀⢠⠀⠀⡇⠀⣀⠤⢒⡿⠁⠀⢹⣄⡼⠁⠀⠀
+		⠀⠀⠀⠀⠸⡇⠀⠀⠀⠈⠓⠚⠋⠚⠀⠀⠓⠛⠓⠒⠁⠀⠀⠀⢀⡏⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠙⣦⠀⢤⣔⠒⠀⠀⢹⠀⠀⣌⠀⠀⠒⢒⢤⠄⣰⠟⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠘⣧⠈⠊⣧⡀⠀⡎⠁⠀⢸⡀⠀⣴⠣⠁⣰⡇⠀⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠀⢿⡀⠀⠘⡜⠢⢼⣆⢠⡯⠔⢊⠏⠀⢀⣸⠀⠀⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠀⠀⠙⢶⡀⢫⠺⢤⢿⣮⡦⠒⡹⢀⡴⠋⠁⠀⠀⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢷⢊⡳⢤⣈⣁⣤⡖⡱⣾⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠳⡄⠉⠉⠉⠉⢀⡼⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+		⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠹⣆⣀⣀⣠⠟⠀⠀⠀⠀⠀
 
-          Hi, welcome to a CULT OF THE DEAD COW super-low bandwidth (!)
-          site.  
+          Hi, welcome to nessus$ github site. (!)  
 
           We released <a href="https://cultdeadcow.com/tools/veilid.html" title="vay-lid">Veilid</a> on 11 August 2023 at <a href="https://defcon.org/html/defcon-31/dc-31-index.html" title="it's def, y0">DEF CON 31</a>.  See also
           <a href="https://veilid.com/" title="we made a thing">veilid.com</a>.
