--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     box-sizing: border-box;
     }
 a:link, a:visited {
-    color: #f80000;
+    color: #00ff00;
     }
 a:active, a:hover {
     color: #ffffff;
